[package]
name = "cfcard-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
axum = { version = "0.5.17", features = ["query"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

image = "0.24.5"
imageproc = "0.23.0"
rusttype = "0.9.3"